# spInfer

./: .gitignore  README.md  pyproject.toml
scripts/: gemma_speculative_inference.py
spInfer/: spGemma.py  speculative_enablement.py  utils.py
